# ski-snow-tracker

./: .env  .env.example  .gitignore  README.md  dbt_project.yml  init_db.py  pyproject.toml  requirements.txt  test_apis.py
app/: config.py  database.py  main.py
app/data_fetchers/: snotel.py  weather_unlocked.py
app/models/: weather.py
dbt/: dbt_project.yml
dbt/models/: schema.yml  sources.yml
dbt/models/marts/: top_snow_resorts.sql
dbt/models/staging/: stg_snotel.sql  stg_weather_unlocked.sql
